# stm32-vscode

./: .gitmodules  CMakeLists.txt  README.md  gpio-v1.c  gpio-v2.c  gpio.h  main.c  project.h  startup.s  syscalls.c  systick.c  systick.h
linker/: common.ld  stm32f401xc.ld
vectors/: stm32f401.s
